User, Channel, Message 의 FileIO, Repository 생성 JCF의 비니지스 로직 Basic 생성